<resources>
    <string name="app_name">FirstApp</string>
    <string name="wel">Image</string>
    <string name="logo">Image</string>
    <string name="part">Image</string>
    <string name="skill">Image</string>
    <string name="finishi">Image</string>
    <string name="FINISH">Button</string>
    <string name="text1">TextView</string>
    <string name="text2">TextView</string>
    <string name="text3">TextView</string>
    <string name="mens1">Mens</string>
    <string name="mens2">Mens</string>
    <string name="mens3">Mens</string>
    <string name="women1">Women</string>
    <string name="women2">Women</string>
    <string name="women3">Women</string>
    <string name="kids1">Kids</string>
    <string name="kids2">Kids</string>
    <string name="kids3">Kids</string>
    <string name="next">Next</string>
    <string name="desired_combos">DESIRED COMBOS</string>
    <string name="get_started">GET STARTED</string>
    <string name="explore_the_world_and_welcome_to_the_swoosh_city">Explore the world and welcome to the swoosh city</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="teenager1">Teenager</string>
    <string name="teenager2">Teenager</string>
    <string name="teenager3">Teenager</string>
    <string name="adult1">Adult</string>
    <string name="adult2">Adult</string>
    <string name="adult3">Adult</string>
    <string name="finish">Finish</string>
    <string name="searchfinish">Looking for a famous brand near you..</string>
    <string name="i_am_a">I am a</string>
</resources>
